[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/button-up-music.png" type="Texture" id=2]
[ext_resource path="res://Sprites/button-down-music.png" type="Texture" id=3]
[ext_resource path="res://Themes/TitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sprites/button-up-sounds.png" type="Texture" id=5]
[ext_resource path="res://Sprites/button-down-sounds.png" type="Texture" id=6]
[ext_resource path="res://Themes/ButtonFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Audio/Music/The Illusion Tower-Loop.ogg" type="AudioStream" id=8]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="TopContainer" type="HBoxContainer" parent="MainContainer"]
margin_right = 1280.0
margin_bottom = 96.0
alignment = 1

[node name="MusicToggle" type="TextureButton" parent="MainContainer/TopContainer"]
margin_right = 96.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="Title" type="Label" parent="MainContainer/TopContainer"]
margin_left = 100.0
margin_top = 11.0
margin_right = 1180.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "The Liar Wizard"
align = 1
valign = 1

[node name="SfxToggle" type="TextureButton" parent="MainContainer/TopContainer"]
margin_left = 1184.0
margin_right = 1280.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 96 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="ButtonsList" type="VBoxContainer" parent="MainContainer"]
margin_top = 100.0
margin_right = 1280.0
margin_bottom = 273.0
alignment = 1

[node name="PlayGame" type="Button" parent="MainContainer/ButtonsList"]
margin_right = 1280.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 7 )
text = "Play Game"
flat = true

[node name="Credits" type="Button" parent="MainContainer/ButtonsList"]
margin_top = 59.0
margin_right = 1280.0
margin_bottom = 114.0
custom_fonts/font = ExtResource( 7 )
text = "Credits"
flat = true

[node name="Exit" type="Button" parent="MainContainer/ButtonsList"]
margin_top = 118.0
margin_right = 1280.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 7 )
text = "Exit"
flat = true

[node name="HowToPlay" type="RichTextLabel" parent="MainContainer"]
margin_top = 277.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 11
size_flags_vertical = 3
custom_fonts/mono_font = ExtResource( 7 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]


How To Play

- Arrow keys to move around the level
- Space to interact, attack, use items
- Escape to access  your inventory
[/center]"
text = "


How To Play

- Arrow keys to move around the level
- Space to interact, attack, use items
- Escape to access  your inventory
"

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="toggled" from="MainContainer/TopContainer/MusicToggle" to="." method="_on_MusicToggle_toggled"]
[connection signal="toggled" from="MainContainer/TopContainer/SfxToggle" to="." method="_on_SfxToggle_toggled"]
[connection signal="pressed" from="MainContainer/ButtonsList/PlayGame" to="." method="_on_PlayGame_pressed"]
[connection signal="pressed" from="MainContainer/ButtonsList/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MainContainer/ButtonsList/Exit" to="." method="_on_Exit_pressed"]
